--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "next": "15.2.3",
     "@tanstack/react-query": "^5.67.2",
     "axios": "^1.8.2",
+    "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.6"
@@ -26,6 +27,7 @@
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "prettier": "^3.5.3",
+    "sass": "^1.86.1",
     "typescript": "^5"
   }
 }
