Add eventList query

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "@event-mobile-front/*": ["src/*"],
       "@event-mobile-front/components": ["src/components/index"],
       "@event-mobile-front/types": ["src/types/index"],
-      "@event-mobile-front/api": ["src/api/index"]
+      "@event-mobile-front/api": ["src/api/index"],
+      "@event-mobile-front/queryKey": ["src/queryKey/index"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
